# WinUTF8Console

./: CMakeLists.txt  README.md  input.txt  test.cpp  utf8stream.h
tests/: comprehensive_test.cpp  input_test.cpp  simple_test.cpp  test_input.txt  utf8_console_tests.cpp
